# zania-agent

./: .gitignore  README.md  app.py  config.py  pyproject.toml
.streamlit/: config.toml
agents/: zania_agent.py
data/: data_index.py  data_indexer.py
tools/: zania_agent_tools.py
